# immo

./: .gitignore  .gitmodules  CMakeLists.txt  Custom_HID.c  TO ADD GTEST.txt  app_32MX220F032B.ld  beanTasks.test.cpp  main.test.cpp  recBean.test.cpp  spi.test.cpp  stateControl.test.cpp
Include/: Compiler.h  Custom_HID.h  addressConvertion.h  beanTasks.h  globalState.h  init.h  initialTasks.h  ports.h  reset.h  sounds.h  spi.h  typeConvert.h
Include/Framework/: Framework.h
Include/HardwareProfile/: HardwareProfile_PIC32MX_USB_StarterKit.h
Include/USB/: GenericTypeDefs.h  usb.h  usb.h.dump  usb_config_device.h  usb_hal_local.h  usb_hal_pic32.h
Source/: Custom_HID.c  addressConvertion.c  beanTasks.c  globalState.c  init.c  initialTasks.c  main.c  ports.c  sounds.c  spi.c  typeConvert.c
Source/FrameWork/: Framework.c
Source/USB/: Usb_HID_tasks.c  addressConvertion.c  usb_config.c  usb_device.c  usb_function_hid.c
immo.X/: app_32MX220F032B.ld
immo.X/Include/: StateControl.h  beanTasks.h  globalState.h  init.h  initialTasks.h  ports.h  sounds.h  spi.h  typeConvert.h
immo.X/Source/: Custom_HID.c  beanTasks.c  globalState.c  init.c  initialTasks.c  main.c  ports.c  sounds.c  spi.c  spi.h  stateControl.c  typeConvert.c
immo.X/nbproject/: configurations.xml  project.xml
mocks/: bean copy.cpp  bean.c  bean.cpp  sounds.cpp  xc.h
nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  Package-default.bash  configurations.xml  project.xml
nbproject/private/: .LCKconfigurations.xml~  configurations.xml  (+1 more)
(+5 files in other folders)
